default/objects/Loan_Team_Member__c/Loan_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Loan Team Member</label>
    <nameField>
        <displayFormat>TM-{00000000}</displayFormat>
        <label>Loan Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>