default/objects/Loan_Team_Member__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Loan Team Members</relationshipLabel>
    <relationshipName>Loan_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>