default/objects/Loan_Team_Member__c/fields/Loan_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Loan_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Internal or External Contact acting as member of Loan Team</inlineHelpText>
    <label>Loan Team Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Team Members</relationshipLabel>
    <relationshipName>Loan_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>